--- a/index.html
+++ b/index.html
@@ -8,16 +8,59 @@
   <title>Responsive</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-  <h2 class="question--title">Q7 サイズ変更</h2>
-  <h2 class="question--title">Q2 色変更</h2>
-  <h2 class="question--title">Q3 margin値の変更</h2>
-  <h2 class="question--title">Q4 floatの解除</h2>
-  <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
-  <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
-  <h2 class="question--title">Q7 要素の表示・非表示</h2>
+  <div class="width_1100">
+    <h2 class="question--title">Q7 サイズ変更</h2>
+    <div class="q1_box box_position"></div>
+    <h2 class="question--title">Q2 色変更</h2>
+    <div class="q2_box box_300 box_position"></div>
+    <h2 class="question--title">Q3 margin値の変更</h2>
+    <div class="flex">
+      <div class="q3_box_b box_300"></div>
+      <div class="q3_box_g box_300"></div>
+    </div>
+    <h2 class="question--title">Q4 floatの解除</h2>
+    <div class="box_position clearfix width_600">
+      <div class="q4_box_r box_300"></div>
+      <div class="q4_box_b box_300"></div>
+    </div>
+    <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
+    <div class="flex flex_position_q5">
+      <div class="q5_box_a box_300">
+        <p class="p_position">A</p>
+      </div>
+      <div class="q5_box_b box_300">
+        <p class="p_position">B</p>
+      </div>
+      <div class="q5_box_c box_300">
+        <p class="p_position">C</p>
+      </div>
+    </div>
+    <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
+    <div class="flex flex_position_q6">
+      <div class="q6_box_a box_300">
+        <p class="p_position">A</p>
+      </div>
+      <div class="q6_box_b box_300">
+        <p class="p_position">B</p>
+      </div>
+      <div class="q6_box_c box_300">
+        <p class="p_position">C</p>
+      </div>
+    </div>
+    <h2 class="question--title">Q7 要素の表示・非表示</h2>
+    <div class="flex flex_position_q7">
+      <div class="q7_box_a box_300">
+      </div>
+      <div class="q7_box_b box_300">
+      </div>
+      <div class="q7_box_c box_300">
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
